[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/NotoEmoji-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/AnimalPediaBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/AnimalPedia.gd" type="Script" id=3]
[ext_resource path="res://UI/LilitaOne-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 12
outline_color = Color( 0.0823529, 0.0470588, 0.0470588, 1 )
font_data = ExtResource( 1 )

[node name="AnimalPedia" type="Node2D"]
script = ExtResource( 3 )

[node name="TitleCard" type="Panel" parent="."]
margin_left = 4.0
margin_top = -51.0
margin_right = 73.0
margin_bottom = -28.0
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="TitleCard"]
margin_left = 4.0
margin_top = 3.0
margin_right = 69.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Critter Guide"

[node name="Background" type="Panel" parent="."]
margin_left = -84.0
margin_top = -32.0
margin_right = 89.0
margin_bottom = 31.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -80.0
margin_top = -47.0
margin_right = -40.0
margin_bottom = -28.0
custom_colors/font_color = Color( 0.0235294, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 2 )
text = "ðŸ¦‹"

[node name="AnimalPediaBox" parent="." instance=ExtResource( 2 )]
position = Vector2( -70, -19 )

[node name="AnimalPediaBoxPlacer" type="Node2D" parent="."]

[node name="AnimalLayout" type="Node2D" parent="."]
visible = false
